# stag

./: .gitignore  CMakeLists.txt
include/: Drawer.h  EDInterface.h  Stag.h  ValidateEdgeSegments.h
include/ED/: Timer.h
src/: Drawer.cpp  EDInterface.cpp  Stag.cpp  main.cpp
src/ED/: ED.cpp  EDInternals.cpp  EDLines.cpp  GradientOperators.cpp  ImageSmooth.cpp  LineSegment.cpp  MyMath.cpp  NFA.cpp  Utilities.cpp
